test/Errors/Function_expected.elab
Theorem bad_app : Prop := Prop Prop